CPG-DEV/src/objects/ProductPlantAssociation__c.object
<CustomObject>
    <fields>
        <fullName>CargillProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cargill Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Plant_Location_Products_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LegacyRecord_ID__c</fullName>
        <label>Legacy Record ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlantAlias__c</fullName>
        <formula>Plant__r.Plant_Alias__c</formula>
        <label>Plant Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plant</label>
        <referenceTo>Plant__c</referenceTo>
        <relationshipLabel>Product Plant Associations</relationshipLabel>
        <relationshipName>Plant_Location_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <formula>CargillProduct__r.ProductCode</formula>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <label>Product Plant Association</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Plant Location Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Plant Associations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>